--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Workspace</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-<%= yield %>
+    <head>
+        <title>Tuiter</title>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+        <%= csrf_meta_tags %>
+    </head>
+    <body>
+        <% if !user_signed_in? %>
+            <%= link_to "Cadastrar", new_user_registration_path %>
+            <%= link_to "Entrar", new_user_session_path %>
+        <% else %>
+            <%= link_to('Sair', destroy_user_session_path, :method => :delete) %> 
+        <% end %>
 
-</body>
+        <%= yield %>
+
+    </body>
 </html>
