--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,6 +16,12 @@
     <%= f.text_area :content %>
   </div>
   
+  <div class="form-group">
+    <%= f.label :Tags, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.select :tag_ids, Tag.all.map{|x| [x.name, x.id]}, {include_blank: true}, :multiple => true, :class => 'form-control' %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
