--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<p id="notice" class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 <h1>Listing Posts</h1>
 
@@ -15,6 +16,7 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.content %></td>
+        <td><%= post.user.email %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
