--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,20 @@
-<p id="notice"><%= notice %></p>
+<p id="notice" class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 <p>
   <strong>Content:</strong>
   <%= @post.content %>
 </p>
 
+<p>
+  <strong>User:</strong>
+  <%= @post.user.email %>
+</p>
+
+<p>
+	<strong>Tags</strong>
+	<%= @post.tags.map { |t| t.name }.join ', ' %>
+
+</p>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
