--- a/app/views/bios/show.html.erb
+++ b/app/views/bios/show.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-
 <p>
-  <strong>User:</strong>
-  <%= @bio.user %>
+  <strong>user_id:</strong>
+  <%= @bio.user.id %>
 </p>
 
 <p>
