--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,5 @@
-<p id="notice" class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-
-<h1>Listing Posts</h1>
+<div class="container">
+<h3>Timeline</h3>
 
 <table>
   <thead>
@@ -27,4 +25,6 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path %> 
+</div>
+
