--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,17 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
+    <%= f.label :content, class: "control-label" %><br>
+    <%= f.text_area :content, class: "control-text-area"%>
   </div>
   
-  <div class="form-group">
-    <%= f.label :Tags, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.select :tag_ids, Tag.all.map{|x| [x.name, x.id]}, {include_blank: true}, :multiple => true, :class => 'form-control' %>
+  <div class="field">
+    <%= f.label :Tags, class: "control-label" %>
+    <div class="tags-text-area">
+      <%= f.select :tag_ids, Tag.all.map{|x| [x.name, x.id]}, {include_blank: true}, :multiple => true, :class => 'control-text-area' %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "default-button" %>
   </div>
 <% end %>
