--- a/app/views/bios/edit.html.erb
+++ b/app/views/bios/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Bio</h1>
+<h3>Editar perfil</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @bio %> |
-<%= link_to 'Back', bios_path %>
+<%= link_to 'Ver', @bio %>
+<%= link_to 'Voltar', bios_path %>
