--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -12,10 +12,10 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :nome %><br>
+    <%= f.text_field :name, class: 'control-text-area' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Criar Tag"%>
   </div>
 <% end %>
