--- a/app/views/bios/index.html.erb
+++ b/app/views/bios/index.html.erb
@@ -1,12 +1,11 @@
-<h1>Listing Bios</h1>
+<h3>Usuários</h3>
 
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Name</th>
+      <th>Nome</th>
       <th>Website</th>
-      <th>City</th>
+      <th>Cidade</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,18 +13,15 @@
   <tbody>
     <% @bios.each do |bio| %>
       <tr>
-        <td><%= bio.user %></td>
         <td><%= bio.name %></td>
         <td><%= bio.website %></td>
         <td><%= bio.city %></td>
-        <td><%= link_to 'Show', bio %></td>
-        <td><%= link_to 'Edit', edit_bio_path(bio) %></td>
-        <td><%= link_to 'Destroy', bio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Ver', bio %></td>
+        <td><%= link_to 'Editar', edit_bio_path(bio) %></td>
+        <td><%= link_to 'Destruir', bio, method: :delete, data: { confirm: 'Certeza?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Bio', new_bio_path %>
