--- a/app/views/bios/show.html.erb
+++ b/app/views/bios/show.html.erb
@@ -1,10 +1,5 @@
 <p>
-  <strong>user_id:</strong>
-  <%= @bio.user.id %>
-</p>
-
-<p>
-  <strong>Name:</strong>
+  <strong>Nome:</strong>
   <%= @bio.name %>
 </p>
 
@@ -14,9 +9,9 @@
 </p>
 
 <p>
-  <strong>City:</strong>
+  <strong>Cidade:</strong>
   <%= @bio.city %>
 </p>
 
-<%= link_to 'Edit', edit_bio_path(@bio) %> |
-<%= link_to 'Back', bios_path %>
+<%= link_to 'Editar', edit_bio_path(@bio) %>
+<%= link_to 'Voltar', bios_path %>
