--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Post</h1>
+<h3>Editar Tuite</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Ver', @post %>
+<%= link_to 'Voltar', posts_path %>
