--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,13 @@
-<p>
-  <strong>Content:</strong>
-  <%= @post.content %>
-</p>
+<div class="posts-content">
+    <p class="post-title"><strong><%= @post.user.email %></strong></p>
+    <span class="tag-name"><%= @post.tags.map { |t| t.name }.join ', ' %></span>
+    <p class="post-text"><%= @post.content %></p>
+</div>
+<div class="user-tuites-links">
+<% if @post.user == current_user %>
+	<%= link_to 'Voltar', posts_path %>
+    <%= link_to 'Editar', edit_post_path(@post) %>
+    <%= link_to 'Remover', @post, method: :delete, data: { confirm: 'Tem certeza?' } %>
+<% end %>
+</div>
 
-<p>
-  <strong>User:</strong>
-  <%= @post.user.email %>
-</p>
-
-<p>
-	<strong>Tags</strong>
-	<%= @post.tags.map { |t| t.name }.join ', ' %>
-
-</p>
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
